syntax = "proto3";

package data;

option go_package = "./gen/protos/data";

service TunnelData {
  rpc ForwardData (stream DataPacket) returns (stream DataPacket) {}
}

enum PacketType {
  REQUEST = 0;
  RESPONSE = 1;
  KEEPALIVE = 2;
}

message DataPacket {
  string tunnel_id = 1;
  string request_id = 2;
  PacketType type = 3;
  string method = 4;
  string url = 5;
  map<string, string> headers = 6;
  bytes data = 7;
  int32 status = 8;
}